# dome-raycast

./: CMakeLists.txt  README.md  main.cpp
config/: config.json
configs/: application.json  model.json
include/: ColorRGB.hpp  DomeProjector.hpp  Frustum.hpp  Hitpoint.hpp  Projector.hpp  Ray.h  Ray.hpp  ShaderUtil.hpp  Shape.hpp  Sphere.h  Sphere.hpp  Utility.hpp  file_writer.hpp  projector_frustum.h  vertex_buffer_data.hpp
outputs/: screen_points.txt  texture_coords.txt
shaders/: simple.frag  simple.vert
sources/: ColorRGB.cpp  DomeProjector.cpp  Frustum.cpp  Hitpoint.cpp  Projector.cpp  Ray.cpp  ShaderUtil.cpp  Shape.cpp  Sphere.cpp  Utility.cpp  file_writer.cpp  projector_frustum.cpp
